# BLE-WinRT

./: .gitignore  CMakeLists.txt  README.md
BLE_WinRT/: BLE_WinRT.cpp  BLE_WinRT.h  CMakeLists.txt  pch.h
BLE_WinRT_Context/: BLE_WinRT_Context.cpp  BLE_WinRT_Context.h  CMakeLists.txt
examples/: bluetooth_interface.h
tests/: CMakeLists.txt
tests/dynamic_link_0/: CMakeLists.txt  main.cpp
tests/dynamic_link_1/: CMakeLists.txt  main.cpp
tests/dynamic_link_2/: CMakeLists.txt  main.cpp
tests/static_link_0/: CMakeLists.txt  main.cpp
tests/static_link_1/: CMakeLists.txt  main.cpp
tests/static_link_2/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  main.cpp
tests/static_link_3/: CMakeLists.txt  main.cpp
tests/static_link_4/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  main.cpp
